--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -222,6 +222,9 @@
     <ClInclude Include="Source\utils\json\JsonUtils.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Source\graphics\renderer\renderpass\SSAOPass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\graphics\shader.cpp">
@@ -408,6 +411,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Source\utils\json\JsonUtils.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\graphics\renderer\renderpass\SSAOPass.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
